syntax = "proto3";

package proto;
option go_package = "github.com/N0F1X3d/todo/gen/go";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (TaskResponse) {}
  rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message GetTaskRequest {
  int32 id = 1;
}

message GetAllTasksRequest {}

message UpdateTaskRequest {
  int32 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional bool completed = 4;
}

message DeleteTaskRequest {
  int32 id = 1;
}

message TaskResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetAllTasksResponse {
  repeated TaskResponse tasks = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}